# noisegen-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  requirements.txt
.github/workflows/: build.yml  clang-format.yml
cli/: CMakeLists.txt
cli/src/: Main.cpp
cmake/: flags.cmake  warnings.cmake
conan/: conan.cmake  conanfile.txt
exe/: CMakeLists.txt
exe/src/: Main.cpp
lib/: CMakeLists.txt
lib/include/noisegen/: Exception.hpp  Generator.hpp  Random.hpp  ScopedProfiler.hpp  Settings.hpp
lib/include/perlin-noise-generator/: Exception.hpp  Generator.hpp  PengenCImg.hpp  Random.hpp  ScopedProfiler.hpp  Settings.hpp
lib/src/: Exception.cpp  Generator.cpp  Random.cpp  ScopedProfiler.cpp  Settings.cpp
